optimize build/install configure

--- a/data/app.desktop.in
+++ b/data/app.desktop.in
@@ -4,7 +4,7 @@ Name[zh_CN]=音乐
 GenericName=Music Player
 GenericName[zh_CN]=音乐播放器
 Exec=g4music %U
-Icon=com.github.neithern.g4music
+Icon=@app_id@
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Music;Audio;AudioVideo;
