--- a/data/meson.build
+++ b/data/meson.build
@@ -1,10 +1,20 @@
+conf = configuration_data()
+conf.set('app_id', app_id)
+conf.set('version', version)
+
+desktop_conf = configure_file(
+  input: 'app.desktop.in',
+  output: '@0@.desktop.in'.format(app_id),
+  configuration: conf
+)
+
 desktop_file = i18n.merge_file(
-  input: 'com.github.neithern.g4music.desktop.in',
-  output: 'com.github.neithern.g4music.desktop',
+  input: desktop_conf,
+  output: '@0@.desktop'.format(app_id),
   type: 'desktop',
   po_dir: '../po',
   install: true,
-  install_dir: join_paths(get_option('datadir'), 'applications')
+  install_dir: get_option('datadir') / 'applications'
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
@@ -14,23 +24,36 @@ if desktop_utils.found()
   )
 endif
 
+appstream_conf = configure_file(
+  input: 'app.appdata.xml.in',
+  output: '@0@.appdata.xml.in'.format(app_id),
+  configuration: conf
+)
+
 appstream_file = i18n.merge_file(
-  input: 'com.github.neithern.g4music.appdata.xml.in',
-  output: 'com.github.neithern.g4music.appdata.xml',
+  input: appstream_conf,
+  output: '@0@.appdata.xml'.format(app_id),
   po_dir: '../po',
   install: true,
-  install_dir: join_paths(get_option('datadir'), 'appdata')
+  install_dir: get_option('datadir') / 'metainfo'
 )
 
 appstream_util = find_program('appstream-util', required: false)
 if appstream_util.found()
   test('Validate appstream file', appstream_util,
-    args: ['validate', appstream_file]
+    args: ['validate', '--nonet', appstream_file]
   )
 endif
 
-install_data('com.github.neithern.g4music.gschema.xml',
-  install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
+gschema_file = configure_file(
+  input: 'app.gschema.xml',
+  output: app_id + '.gschema.xml',
+  configuration: conf,
+)
+
+install_data(
+  gschema_file,
+  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
 )
 
 compile_schemas = find_program('glib-compile-schemas', required: false)
