add license: GPL3

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,7 @@ sources = [
   'application.vala',
   'async-task.vala',
   'gst-player.vala',
+  'main.vala',
   'mpris.vala',
   'paintables.vala',
   'play-bar.vala',
