--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -4,6 +4,6 @@
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<description>
-	  <p>No description</p>
+	  <p>A fast, flurent, light weight music player written in GTK4.</p>
 	</description>
 </component>
