--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -27,6 +27,7 @@
         <li>Gaussian blurred album cover as window background, follow GNOME 42 light/dark mode.</li>
         <li>Album cover with original resolution, can be exported.</li>
         <li>Flurent transition animations when switching songs and toggling play/pause.</li>
+        <li>Supports MPRIS.</li>
         <li>Supports full-text searching.</li>
         <li>Supports drag-drop from file manager.</li>
         <li>Supports pipewire audio sink.</li>
