show peak  works with pipewire in flatpak

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ sources = [
   'application.vala',
   'async-task.vala',
   'gst-player.vala',
+  'gst-level.c',
   'main.vala',
   'mpris.vala',
   'paintables.vala',
@@ -30,7 +31,7 @@ sources += gnome.compile_resources('g4music-resources',
 executable('g4music', sources,
   vala_args: [
     meson.current_source_dir () + '/config.vapi',
-    meson.current_source_dir () + '/gst-tag.vapi',
+    meson.current_source_dir () + '/gst-ext.vapi',
   ],
   dependencies: dependencies,
   install: true,
