--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -4,7 +4,7 @@
     <name>G4Music</name>
     <metadata_license>CC0-1.0</metadata_license>
     <project_license>GPL-3.0-or-later</project_license>
-    <summary>Play your music</summary>
+    <summary>Play your music, in elegant way.</summary>
 
     <developer_name>Nanling</developer_name>
     <update_contact>neithern@outlook.com</update_contact>
@@ -17,23 +17,21 @@
 
     <description>
       	<p>A fast, flurent, light weight music player written in GTK4.</p>
-
         <p>Features</p>
-
         <ul>
-        <li>Supports most music file types, samba and any other remote protocols.</li>
-        <li>Fast loading music files and parsing tags.</li>
-        <li>Low memory / storage costs, no thumbnail caches.</li>
-        <li>Gaussian blurred album cover as window background, follow GNOME 42 light/dark mode.</li>
-        <li>Album cover with original resolution, can be exported.</li>
-        <li>Flurent transition animations when switching songs and toggling play/pause.</li>
-        <li>Supports MPRIS.</li>
-        <li>Supports full-text searching.</li>
+        <li>Supports most music file types, samba and any other remote protocols (thanks to great GIO and GStreamer).</li>
+        <li>Fast loading and parsing hundreds of music files, in less than 1 second.</li>
+        <li>Low memory usage for large playlist with album covers, no thumbnail caches to store.</li>
+        <li>Sort by album/artist/title or shuffle, supports full-text searching.</li>
+        <li>Album cover is original resolution, can be exported.</li>
+        <li>Gaussian blurred cover as window background.</li>
+        <li>Follow GNOME 42 light/dark mode.</li>
+        <li>Supports MPRIS control.</li>
         <li>Supports drag-drop from file manager.</li>
         <li>Supports pipewire audio sink.</li>
         <li>Show dynamic audio peak when playing.</li>
+        <li>All these in a small package less than 300KB.</li>
         </ul>
-
     </description>
         
     <screenshots>
