--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -20,7 +20,7 @@
         <p>Features</p>
         <ul>
         <li>Supports most music file types, samba and any other remote protocols (thanks to great GIO and GStreamer).</li>
-        <li>Fast loading and parsing hundreds of music files, in less than 1 second.</li>
+        <li>Fast loading and parsing hundreds of music files, in very few seconds.</li>
         <li>Low memory usage for large playlist with album covers, no thumbnail caches to store.</li>
         <li>Sort by album/artist/title or shuffle, supports full-text searching.</li>
         <li>Album cover is original resolution, can be exported.</li>
@@ -41,6 +41,16 @@
     </screenshots>
 
     <releases>
+        <release version="0.5" date="2022-06-13">
+            <description>
+                <ul>
+                <li>Detect music file type to fix incorrect parsing.</li>
+                <li>Update app icon to follow GNOME HIG, thanks to @daudix-UFO.</li>
+                <li>Add Russian translation, thanks to @daudix-UFO.</li>
+                <li>Change "Force Dark" to "Prefer Dark".</li>
+                </ul>
+            </description>
+        </release>
         <release version="0.4" date="2022-06-12">
             <description>
                 <ul>
