--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -4,7 +4,7 @@
     <name>G4Music</name>
     <metadata_license>CC0-1.0</metadata_license>
     <project_license>GPL-3.0-or-later</project_license>
-    <summary>Play your music, in elegant way.</summary>
+    <summary>Play your music in an elegant way.</summary>
 
     <developer_name>Nanling</developer_name>
     <update_contact>neithern@outlook.com</update_contact>
@@ -16,11 +16,11 @@
     <content_rating type="oars-1.1"/>
 
     <description>
-      	<p>A fast, flurent, light weight music player written in GTK4.</p>
+      	<p>A fast, fluent, lightweight music player written in GTK4.</p>
         <p>Features</p>
         <ul>
         <li>Supports most music file types, samba and any other remote protocols (thanks to great GIO and GStreamer).</li>
-        <li>Fast loading and parsing hundreds of music files, in very few seconds.</li>
+        <li>Fast loading and parsing hundreds of music files in very few seconds.</li>
         <li>Low memory usage for large playlist with album covers, no thumbnail caches to store.</li>
         <li>Sort by album/artist/title or shuffle, supports full-text searching.</li>
         <li>Album cover is original resolution, can be exported.</li>
