--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -16,7 +16,7 @@
     <content_rating type="oars-1.1"/>
 
     <description>
-      	<p>A fast, fluent, lightweight music player written in GTK4.</p>
+      	<p>A fast, flurent, light weight music player written in GTK4, with a beautiful, adaptive user interface, so named G4Music.</p>
         <p>Features</p>
         <ul>
         <li>Supports most music file types, samba and any other remote protocols (thanks to great GIO and GStreamer).</li>
