sort text by prefix number

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,7 @@ sources = [
   'paintables.vala',
   'play-bar.vala',
   'preferences.vala',
+  'song.vala',
   'song-entry.vala',
   'song-store.vala',
   'tag-parser.vala',
