show current song in Files

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ sources = [
   'mpris.vala',
   'paintables.vala',
   'play-bar.vala',
+  'portal.vala',
   'preferences.vala',
   'song.vala',
   'song-entry.vala',
@@ -33,6 +34,7 @@ sources += gnome.compile_resources('g4music-resources',
 executable('g4music', sources,
   vala_args: [
     meson.current_source_dir () + '/config.vapi',
+    meson.current_source_dir () + '/glib-ext.vapi',
     meson.current_source_dir () + '/gst-ext.vapi',
   ],
   dependencies: dependencies,
