draw peak to avoid resize the window

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,6 +9,7 @@ sources = [
   'mini-bar.vala',
   'mpris.vala',
   'paintables.vala',
+  'peak-bar.vala',
   'play-bar.vala',
   'portal.vala',
   'preferences.vala',
