--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -55,6 +55,7 @@
                 <li>Cache tags to make next loading faster.</li>
                 <li>Share album cover with same artist.</li>
                 <li>Fix some UI issues.</li>
+                <li>v1.0.1: Updated Russian translation..</li>
                 </ul>
             </description>
         </release>
