--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -48,6 +48,17 @@
     </screenshots>
 
     <releases>
+        <release version="1.3" date="2022-07-17">
+            <description>
+                <ul>
+                <li>App inhibit suspend to keep playing.</li>
+                <li>Performance improvement and memory saveing.</li>
+                <li>Parse tags of MKV/MKA.</li>
+                <li>Add French translation, thanks to Aurélien Hamy.</li>
+                <li>Add Dutch translation, thanks to Heimen Stoffels.</li>
+                </ul>
+            </description>
+        </release>
         <release version="1.2" date="2022-07-01">
             <description>
                 <ul>
