--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -48,6 +48,16 @@
     </screenshots>
 
     <releases>
+        <release version="1.4" date="2022-07-23">
+            <description>
+                <ul>
+                <li>Popover menu for song entry.</li>
+                <li>Show initial status if no sound found.</li>
+                <li>Try parse album and track from file path.</li>
+                <li>Add Italian translation, thanks to Albano Aattistella.</li>
+                </ul>
+            </description>
+        </release>
         <release version="1.3" date="2022-07-17">
             <description>
                 <ul>
