rename 'Song' to 'Music' all

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,9 +4,9 @@ src/gtk/preferences.ui
 src/gtk/window.ui
 src/application.vala
 src/main.vala
+src/music.vala
+src/music-entry.vala
+src/music-store.vala
 src/play-bar.vala
 src/preferences.vala
-src/song.vala
-src/song-entry.vala
-src/song-store.vala
 src/window.vala
