--- a/src/meson.build
+++ b/src/meson.build
@@ -9,14 +9,14 @@ sources = [
   'main.vala',
   'mini-bar.vala',
   'mpris.vala',
+  'music.vala',
+  'music-entry.vala',
+  'music-store.vala',
   'paintables.vala',
   'peak-bar.vala',
   'play-bar.vala',
   'portal.vala',
   'preferences.vala',
-  'song.vala',
-  'song-entry.vala',
-  'song-store.vala',
   'tag-cache.vala',
   'tag-parser.vala',
   'thumbnailer.vala',
