restructure the source directory

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,26 +1,27 @@
 
 sources = [
-  'ape-demux.c',
   'application.vala',
-  'async-task.vala',
-  'data-io.vala',
-  'dir-cache.vala',
-  'gst-player.vala',
+  'config.vapi',
   'main.vala',
-  'mini-bar.vala',
-  'mpris.vala',
-  'music.vala',
-  'music-entry.vala',
-  'music-store.vala',
-  'paintables.vala',
-  'peak-bar.vala',
-  'play-bar.vala',
-  'portal.vala',
-  'preferences.vala',
-  'tag-cache.vala',
-  'tag-parser.vala',
-  'thumbnailer.vala',
-  'window.vala',
+  'gst/ape-demux.c',
+  'gst/gst-player.vala',
+  'gst/tag-parser.vala',
+  'ui/mini-bar.vala',
+  'ui/music-entry.vala',
+  'ui/paintables.vala',
+  'ui/peak-bar.vala',
+  'ui/play-bar.vala',
+  'ui/preferences.vala',
+  'ui/window.vala',
+  'utils/async-task.vala',
+  'utils/data-io.vala',
+  'utils/dir-cache.vala',
+  'utils/mpris.vala',
+  'utils/music.vala',
+  'utils/music-store.vala',
+  'utils/portal.vala',
+  'utils/tag-cache.vala',
+  'utils/thumbnailer.vala',
 ]
 
 conf = configuration_data()
@@ -30,14 +31,16 @@ conf.set_quoted('LOCALEDIR', get_option('prefix') / get_option('localedir'))
 configure_file(output: 'config.h', configuration: conf)
 
 sources += gnome.compile_resources('g4music-resources',
-  'g4music.gresource.xml',
+  'gresource.xml',
   c_name: 'g4music'
 )
 
+add_project_arguments('-I' + meson.current_source_dir () + '/gst/', language: 'c')
+
 executable('g4music', sources,
   vala_args: [
-    meson.current_source_dir () + '/config.vapi',
-    meson.current_source_dir () + '/gst-ext.vapi',
+    # meson.current_source_dir () + '/config.vapi',
+    meson.current_source_dir () + '/gst/gst-ext.vapi',
   ],
   dependencies: dependencies,
   install: true,
