--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -48,6 +48,15 @@
     </screenshots>
 
     <releases>
+        <release version="1.9.1" date="2023-3-25">
+            <description>
+                <ul>
+                <li>Optimize loading thumbnails.</li>
+                <li>UI improvement and fixing.</li>
+                <li>Update German translation.</li>
+                </ul>
+            </description>
+        </release>
         <release version="1.9" date="2023-3-17">
             <description>
                 <ul>
