--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,25 @@
     // 使用 IntelliSense 了解相关属性。 
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+    // Debug with webfreak.debug extension
     "version": "0.2.0",
     "configurations": [
         {
             "type": "gdb",
             "request": "launch",
-            "name": "Launch",
+            "name": "Launch gdb",
             "target": "${workspaceFolder}/build/src/${workspaceFolderBasename}",
             "cwd": "${workspaceRoot}",
             "valuesFormatting": "parseText",
-            "preLaunchTask": "Compile"
+            "preLaunchTask": "Compile",
         },
         {
-            "type": "cppdbg",
+            "type": "lldb-mi",
             "request": "launch",
-            "name": "Launch2",
-            "program": "${workspaceFolder}/build/src/${workspaceFolderBasename}",
+            "name": "Launch lldb",
+            "target": "${workspaceFolder}/build/src/${workspaceFolderBasename}",
             "cwd": "${workspaceRoot}",
-            "osx": {
-                "MIMode": "lldb"
-            },
-            "linux": {
-                "MIMode": "gdb"
-            },
+            "valuesFormatting": "parseText",
             "preLaunchTask": "Compile"
         }
     ]
